cmake_minimum_required(VERSION 3.14)

set(CMAKE_CXX_STANDARD 14)

project(CaDiCal
  VERSION
    1.4.0
  DESCRIPTION
    "CaDiCaL Simplified Satisfiability Solver <http://fmv.jku.at/cadical>"
)

file(READ "VERSION" VERSION)

add_library(cadical STATIC
  src/analyze.cpp
	src/compact.cpp
	src/flags.cpp
	src/message.hpp
	src/random.cpp
	src/terminal.cpp
	src/arena.cpp
	src/condition.cpp
	src/flags.hpp
	src/minimize.cpp
	src/random.hpp
	src/terminal.hpp
	src/arena.hpp
	src/config.cpp
	src/format.cpp
	src/mobical.cpp
	src/range.hpp
	src/ternary.cpp
	src/assume.cpp
	src/config.hpp
	src/format.hpp
	src/observer.hpp
	src/tracer.cpp
	src/averages.cpp
	src/gates.cpp
	src/occs.cpp
	src/reduce.cpp
	src/tracer.hpp
	src/averages.hpp
	src/contract.cpp
	src/heap.hpp
	src/occs.hpp
	src/reluctant.hpp
	src/transred.cpp
	src/backtrack.cpp
	src/contract.hpp
	src/instantiate.cpp
	src/options.cpp
	src/rephase.cpp
	src/util.cpp
	src/backward.cpp
	src/cover.cpp
	src/instantiate.hpp
	src/options.hpp
	src/report.cpp
	src/util.hpp
	src/bins.cpp
	src/cover.hpp
	src/internal.cpp
	src/parse.cpp
	src/resources.cpp
	src/var.cpp
	src/bins.hpp
	src/decide.cpp
	src/internal.hpp
	src/parse.hpp
	src/resources.hpp
	src/var.hpp
	src/block.cpp
	src/decompose.cpp
	src/ipasir.cpp
	src/phases.cpp
	src/restart.cpp
	src/version.cpp
	src/block.hpp
	src/deduplicate.cpp
	src/ipasir.h
	src/phases.hpp
	src/restore.cpp
	src/version.hpp
	src/cadical.cpp
	src/elim.cpp
	src/level.hpp
	src/probe.cpp
	src/score.cpp
	src/vivify.cpp
	src/cadical.hpp
	src/elim.hpp
	src/limit.cpp
	src/profile.cpp
	src/score.hpp
	src/vivify.hpp
	src/ccadical.cpp
	src/ema.cpp
	src/limit.hpp
	src/profile.hpp
	src/signal.cpp
	src/walk.cpp
	src/ccadical.h
	src/ema.hpp
	src/logging.cpp
	src/proof.cpp
	src/signal.hpp
	src/watch.cpp
	src/checker.cpp
	src/extend.cpp
	src/logging.hpp
	src/proof.hpp
	src/solution.cpp
	src/watch.hpp
	src/checker.hpp
	src/external.cpp
	src/lookahead.cpp
	src/propagate.cpp
	src/solver.cpp
	src/clause.cpp
	src/external.hpp
	src/lucky.cpp
	src/queue.cpp
	src/stats.cpp
	src/clause.hpp
	src/file.cpp
	src/queue.hpp
	src/stats.hpp
	src/collect.cpp
	src/file.hpp
	src/message.cpp
	src/radix.hpp
	src/subsume.cpp
)

target_compile_options(cadical PRIVATE -DNBUILD)
install(TARGETS cadical DESTINATION lib)
